--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ header {
 
 .btn {
   border: none;
-  background-color: hsl(360, 91%, 36%);
+  background-color: rgb(35, 4, 121);
   border-radius: 25px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
     0px;
@@ -86,6 +86,7 @@ header {
   padding: 14px 34px;
   text-align: center;
   cursor: pointer;
+
 }
 
 button[disabled] {
